2009-04-05  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to issue #10834: htmlArea RTE: IE8 now uses standard name for DOM class attribute

2009-04-04  Steffen Kamper  <info@sk-typo3.de>

	* Fixed issue #10764: Use new JS-function for loading prototype/scriptaculous/extJS

2009-04-03  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #10837: htmlARea RTE: IE8 reports unknown "complete" attribute on img nodes
	* Fixed bug #10836: htmlARea RTE: RTE leaves unwanted id attribute on inserted table in IE8
	* Added feature #10842: htmlArea RTE: Let IE8 display language marks like other browsers do
	* Fixed bug #10843: htmlArea RTE: IE7 complains when reference is made to attribute xml:lang
	* Fixed bug #10844: htmlArea RTE: IE8 creates erroneous ranges when selection is empty
	* Fixed bug #10845: htmlArea RTE: Incorrect XCLASS in class.tx_rtehtmlarea_editormode.php
	* Fixed bug #10846: htmlArea RTE: Missing icon in default skin of Language extension
	* Updated htmlArea RTE manual
	* Updated htmlArea RTE version to 1.8.2

2009-04-03  Patrick Broens  <patrick@patrickbroens.nl>

	* Fixed bug #10783: Make workspaces icons skinnable

2009-04-03  Ingo Renner  <ingo@typo3.org>

	* Added feature #9703: Integrate EXT: ingmar_admpanelwrap
	* Fixed bug #10838: t3lib_cs->utf8_decode() does not check whether the target charset is utf8

2009-04-02  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #10834: htmlArea RTE: IE8 now uses standard name for DOM class attribute
	* Fixed issue #10747: htmlArea RTE: Inserting a table in IE8 may fail

2009-04-01  Steffen Kamper  <info@sk-typo3.de>

	* FollowUp #10025: ImageMagick generates larger than necessary files: identify doesn't work with the 'profile'-parameter

2009-03-31  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #10567: Added IE8+ support / Get rid of browser version dependent t3lib_div::clientInfo() (Thanks to Steffen Gebert)
	* #10717: Introduced a new function to t3lib_div::getMaxUploadFileSize() to have a central